chore: bang the includes

--- a/biome.json
+++ b/biome.json
@@ -1,147 +1,145 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
-	"files": {
-		"ignoreUnknown": true,
-		"includes": [
-			"packages/legacy/apps/**/*.ts",
-			"packages/legacy/apps/**/*.tsx",
-			"packages/legacy/apps/**/*.js",
-			"packages/legacy/apps/**/*.jsx",
-			"packages/legacy/apps/**/*.css",
-			"packages/legacy/pages/**/*.ts",
-			"packages/legacy/pages/**/*.tsx",
-			"packages/legacy/middleware.ts",
-			"packages/legacy/*.config.js",
-			"packages/legacy/tsconfig.json",
-			"packages/legacy/package.json",
-			"packages/nextgen/src/**/*.ts",
-			"packages/nextgen/src/**/*.tsx",
-			"packages/nextgen/src/**/*.js",
-			"packages/nextgen/src/**/*.jsx",
-			"packages/nextgen/src/**/*.css",
-			"packages/nextgen/*.config.*",
-			"packages/nextgen/tsconfig*.json",
-			"packages/nextgen/package.json"
-		]
-	},
-	"formatter": {
-		"enabled": true,
-		"formatWithErrors": false,
-		"indentStyle": "tab",
-		"indentWidth": 4,
-		"lineEnding": "lf",
-		"lineWidth": 120,
-		"attributePosition": "auto",
-		"bracketSameLine": false,
-		"bracketSpacing": true,
-		"expand": "auto",
-		"useEditorconfig": true
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true,
-			"a11y": {
-				"noLabelWithoutControl": "off",
-				"noStaticElementInteractions": "off",
-				"noSvgWithoutTitle": "off",
-				"useAriaPropsSupportedByRole": "off",
-				"useButtonType": "off",
-				"useKeyWithClickEvents": "off"
-			},
-			"complexity": {
-				"noAdjacentSpacesInRegex": "error",
-				"noExcessiveCognitiveComplexity": "off",
-				"noExtraBooleanCast": "error",
-				"noForEach": "off",
-				"noUselessCatch": "error",
-				"noUselessEscapeInRegex": "error",
-				"noVoid": "off",
-				"useOptionalChain": "error"
-			},
-			"correctness": {
-				"noConstAssign": "error",
-				"noConstantCondition": "error",
-				"noEmptyCharacterClassInRegex": "error",
-				"noEmptyPattern": "error",
-				"noGlobalObjectCalls": "error",
-				"noInnerDeclarations": "error",
-				"noInvalidConstructorSuper": "error",
-				"noNonoctalDecimalEscape": "error",
-				"noPrecisionLoss": "error",
-				"noSelfAssign": "error",
-				"noSetterReturn": "error",
-				"noSwitchDeclarations": "error",
-				"noUndeclaredVariables": "error",
-				"noUnreachable": "error",
-				"noUnreachableSuper": "error",
-				"noUnsafeFinally": "error",
-				"noUnsafeOptionalChaining": "error",
-				"noUnusedImports": "error",
-				"noUnusedLabels": "error",
-				"noUnusedVariables": "error",
-				"useExhaustiveDependencies": "warn",
-				"useHookAtTopLevel": "error",
-				"useIsNan": "error",
-				"useValidForDirection": "error",
-				"useValidTypeof": "error",
-				"useYield": "error"
-			},
-			"security": { "noDangerouslySetInnerHtml": "off" },
-			"style": {
-				"noNonNullAssertion": "off",
-				"useBlockStatements": "error",
-				"useConsistentArrayType": { "level": "error", "options": { "syntax": "shorthand" } },
-				"useEnumInitializers": "off",
-				"useForOf": "error",
-				"useShorthandFunctionType": "error",
-				"useTemplate": "off"
-			},
-			"suspicious": {
-				"noAsyncPromiseExecutor": "off",
-				"noCatchAssign": "error",
-				"noClassAssign": "error",
-				"noCompareNegZero": "error",
-				"noControlCharactersInRegex": "error",
-				"noDebugger": "error",
-				"noDuplicateCase": "error",
-				"noDuplicateClassMembers": "error",
-				"noDuplicateElseIf": "error",
-				"noDuplicateObjectKeys": "error",
-				"noDuplicateParameters": "error",
-				"noEmptyBlockStatements": "error",
-				"noExplicitAny": "warn",
-				"noFallthroughSwitchClause": "error",
-				"noFunctionAssign": "error",
-				"noGlobalAssign": "error",
-				"noImportAssign": "error",
-				"noIrregularWhitespace": "error",
-				"noMisleadingCharacterClass": "error",
-				"noPrototypeBuiltins": "error",
-				"noRedeclare": "error",
-				"noShadowRestrictedNames": "error",
-				"noSparseArray": "error",
-				"noUnsafeNegation": "error",
-				"noWith": "error",
-				"useGetterReturn": "error"
-			}
-		}
-	},
-	"javascript": {
-		"formatter": {
-			"jsxQuoteStyle": "double",
-			"quoteProperties": "asNeeded",
-			"trailingCommas": "none",
-			"semicolons": "always",
-			"arrowParentheses": "asNeeded",
-			"bracketSameLine": false,
-			"quoteStyle": "single",
-			"attributePosition": "auto",
-			"bracketSpacing": false
-		}
-	},
-	"css": { "parser": null, "formatter": { "enabled": true }, "linter": { "enabled": true }, "assist": null },
-	"html": { "formatter": { "selfCloseVoidElements": "always" } },
-	"overrides": [{ "includes": ["*.{ts,tsx}"], "linter": { "rules": {} } }],
-	"plugins": ["./.grit/assign.grit"]
+  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "files": {
+    "ignoreUnknown": true,
+    "includes": [
+      "**",
+      "!**/dist/**",
+      "!**/build/**",
+      "!**/node_modules/**",
+      "!**/.next/**",
+      "!**/.git/**",
+      "!**/generated/**",
+      "!**/wagmi.ts",
+      "!**/wagmi.d.ts"
+    ]
+  },
+  "formatter": {
+    "enabled": true,
+    "formatWithErrors": false,
+    "indentStyle": "tab",
+    "indentWidth": 4,
+    "lineEnding": "lf",
+    "lineWidth": 120,
+    "attributePosition": "auto",
+    "bracketSameLine": false,
+    "bracketSpacing": true,
+    "expand": "auto",
+    "useEditorconfig": true
+  },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true,
+      "a11y": {
+        "noLabelWithoutControl": "off",
+        "noStaticElementInteractions": "off",
+        "noSvgWithoutTitle": "off",
+        "useAriaPropsSupportedByRole": "off",
+        "useButtonType": "off",
+        "useKeyWithClickEvents": "off"
+      },
+      "complexity": {
+        "noAdjacentSpacesInRegex": "error",
+        "noExcessiveCognitiveComplexity": "off",
+        "noExtraBooleanCast": "error",
+        "noForEach": "off",
+        "noUselessCatch": "error",
+        "noUselessEscapeInRegex": "error",
+        "noVoid": "off",
+        "useOptionalChain": "error"
+      },
+      "correctness": {
+        "noConstAssign": "error",
+        "noConstantCondition": "error",
+        "noEmptyCharacterClassInRegex": "error",
+        "noEmptyPattern": "error",
+        "noGlobalObjectCalls": "error",
+        "noInnerDeclarations": "error",
+        "noInvalidConstructorSuper": "error",
+        "noNonoctalDecimalEscape": "error",
+        "noPrecisionLoss": "error",
+        "noSelfAssign": "error",
+        "noSetterReturn": "error",
+        "noSwitchDeclarations": "error",
+        "noUndeclaredVariables": "error",
+        "noUnreachable": "error",
+        "noUnreachableSuper": "error",
+        "noUnsafeFinally": "error",
+        "noUnsafeOptionalChaining": "error",
+        "noUnusedImports": "error",
+        "noUnusedLabels": "error",
+        "noUnusedVariables": "error",
+        "useExhaustiveDependencies": "warn",
+        "useHookAtTopLevel": "error",
+        "useIsNan": "error",
+        "useValidForDirection": "error",
+        "useValidTypeof": "error",
+        "useYield": "error"
+      },
+      "security": { "noDangerouslySetInnerHtml": "off" },
+      "style": {
+        "noNonNullAssertion": "off",
+        "useBlockStatements": "error",
+        "useConsistentArrayType": {
+          "level": "error",
+          "options": { "syntax": "shorthand" }
+        },
+        "useEnumInitializers": "off",
+        "useForOf": "error",
+        "useShorthandFunctionType": "error",
+        "useTemplate": "off"
+      },
+      "suspicious": {
+        "noAsyncPromiseExecutor": "off",
+        "noCatchAssign": "error",
+        "noClassAssign": "error",
+        "noCompareNegZero": "error",
+        "noControlCharactersInRegex": "error",
+        "noDebugger": "error",
+        "noDuplicateCase": "error",
+        "noDuplicateClassMembers": "error",
+        "noDuplicateElseIf": "error",
+        "noDuplicateObjectKeys": "error",
+        "noDuplicateParameters": "error",
+        "noEmptyBlockStatements": "error",
+        "noExplicitAny": "warn",
+        "noFallthroughSwitchClause": "error",
+        "noFunctionAssign": "error",
+        "noGlobalAssign": "error",
+        "noImportAssign": "error",
+        "noIrregularWhitespace": "error",
+        "noMisleadingCharacterClass": "error",
+        "noPrototypeBuiltins": "error",
+        "noRedeclare": "error",
+        "noShadowRestrictedNames": "error",
+        "noSparseArray": "error",
+        "noUnsafeNegation": "error",
+        "noWith": "error",
+        "useGetterReturn": "error"
+      }
+    }
+  },
+  "javascript": {
+    "formatter": {
+      "jsxQuoteStyle": "double",
+      "quoteProperties": "asNeeded",
+      "trailingCommas": "none",
+      "semicolons": "always",
+      "arrowParentheses": "asNeeded",
+      "bracketSameLine": false,
+      "quoteStyle": "single",
+      "attributePosition": "auto",
+      "bracketSpacing": false
+    }
+  },
+  "css": {
+    "parser": null,
+    "formatter": { "enabled": true },
+    "linter": { "enabled": true },
+    "assist": null
+  },
+  "html": { "formatter": { "selfCloseVoidElements": "always" } },
+  "overrides": [{ "includes": ["*.{ts,tsx}"], "linter": { "rules": {} } }],
+  "plugins": ["./.grit/assign.grit"]
 }
