fix: remove workaround

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "private": true,
-  "scripts": {
-    "legacy": "(cd packages/legacy && bun dev)",
-    "nextgen": "(cd packages/nextgen && bun dev)",
-    "clean": "bash clean.sh"
-  },
-  "workspaces": [
-    "packages/*"
-  ],
-  "devDependencies": {
-    "@biomejs/biome": "^2.1.2"
-  }
+	"private": true,
+	"scripts": {
+		"legacy": "(cd packages/legacy && bun dev)",
+		"nextgen": "(cd packages/nextgen && bun dev)",
+		"clean": "bash clean.sh"
+	},
+	"workspaces": ["packages/*"],
+	"devDependencies": {
+		"@biomejs/biome": "^2.1.2",
+		"@types/minimatch": "^6.0.0"
+	}
 }
