--- a/packages/nextgen/package.json
+++ b/packages/nextgen/package.json
@@ -20,8 +20,9 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.2",
 		"@tailwindcss/vite": "^4.1.11",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
+		"@types/minimatch": "^6.0.0",
+		"@types/react": "^19.0.0",
+		"@types/react-dom": "^19.0.0",
 		"@vitejs/plugin-react": "^4.6.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11",
