--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,3 +33,6 @@ jobs:
               uses: wearerequired/lint-action@v2
               with:
                   eslint: true
+                  eslint_dir: packages/legacy
+                  eslint_extensions: js,jsx,ts,tsx
+                  eslint_args: --no-eslintrc --config .eslintrc.js
