--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
 		"nextgen": "(cd packages/nextgen && bun dev)",
 		"clean": "bash clean.sh"
 	},
-	"workspaces": [
-		"packages/*"
-	],
+	"workspaces": ["packages/*"],
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.2",
-		"minimatch": "^6.0.0"
+		"typescript": "^5.5.4"
+	},
+	"overrides": {
+		"ox": "0.6.9"
 	}
 }
