--- a/biome.json
+++ b/biome.json
@@ -81,6 +81,7 @@
 			},
 			"security": { "noDangerouslySetInnerHtml": "off" },
 			"style": {
+				"useNodejsImportProtocol": "off",
 				"noNonNullAssertion": "off",
 				"useBlockStatements": "error",
 				"useConsistentArrayType": {
