--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -55,20 +55,19 @@
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
     "@next/bundle-analyzer": "^14.2.4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/react": "^16.0.0",
     "@types/minimatch": "^6.0.0",
     "@types/node": "^20.14.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "bump": "^0.2.5",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "next-transpile-modules": "^10.0.1",
     "postcss": "^8.4.38",
-    "postcss-import": "^16.1.0",
     "postcss-nesting": "^12.1.5",
     "tailwindcss": "^4.1.11",
     "ts-loader": "^9.5.1",
