--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -25,8 +25,10 @@
     "@tanstack/react-query": "^5.51.11",
     "@vanilla-extract/css": "^1.17.0",
     "@vanilla-extract/sprinkles": "^1.6.3",
+    "@vercel/og": "^0.8.5",
     "@wagmi/connectors": "^5.1.4",
     "@wagmi/core": "^2.11.7",
+    "@yearnfi/nextgen": "workspace:*",
     "axios": "^1.7.2",
     "ethers": "5.7.2",
     "framer-motion": "^11.2.10",
@@ -49,8 +51,7 @@
     "viem": "^2.31.7",
     "wagmi": "^2.10.10",
     "xxhashjs": "^0.2.2",
-    "zod": "^3.23.8",
-    "@yearnfi/nextgen": "workspace:*"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
