--- a/packages/legacy/public/apps/vaults-manifest.json
+++ b/packages/legacy/public/apps/vaults-manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Yearn Vaults",
   "short_name": "Vaults",
-  "description": "Let your assets work for you with the best risk-adjusted yields in DeFi.",
+  "description": "DeFi's Yield Aggregator.",
   "iconPath": "./favicons/favicon.svg",
   "locale": "en-US",
   "uri": "https://yearn.fi/vaults/",
   "og": "https://yearn.fi/apps/vaults-og.png",
-  "twitter": "@iearnfinance",
+  "twitter": "@yearnfi",
   "github": "https://github.com/yearn/yearn.fi",
   "icons": [
     {
