--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,7 +31,7 @@ jobs:
                   echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
             - name: Install project dependencies
-              run: bun install
+              run: bun install --no-cache
 
             - name: Lint legacy package
               run: cd packages/legacy && bun run lint
