--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,6 +30,8 @@ jobs:
                   curl -fsSL https://bun.sh/install | bash
                   echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
+            - name: Clean up
+              run: bun clean
             - name: Install project dependencies
               run: bun install --no-cache
 
