--- a/packages/legacy/.env.example
+++ b/packages/legacy/.env.example
@@ -1,18 +1,13 @@
-WS_URL_MAINNET=
-WS_URL_OPTIMISM=
-WS_URL_FANTOM=
-WS_URL_ARBITRUM=
-
-RPC_URL_MAINNET=
-RPC_URL_OPTIMISM=
-RPC_URL_FANTOM=
-RPC_URL_ARBITRUM=
-ALCHEMY_KEY=
-INFURA_KEY=
-PARTNER_ID_ADDRESS=0xFEB4acf3df3cDEA7399794D0869ef76A6EfAff52
-SHOULD_USE_PARTNER_CONTRACT=true
 WALLETCONNECT_PROJECT_ID=
+YDAEMON_BASE_URI=
+NODE_ENV=development
 
-SENTRY_DSN=
-
-YDAEMON_BASE_URI=https://ydaemon.yearn.fi
+RPC_URI_FOR_1=
+RPC_URI_FOR_10=
+RPC_URI_FOR_100=
+RPC_URI_FOR_137=
+RPC_URI_FOR_146=
+RPC_URI_FOR_250=
+RPC_URI_FOR_8453=
+RPC_URI_FOR_42161=
+RPC_URI_FOR_747474=
