--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -7,7 +7,7 @@
     "dev:ts": "tsc --watch",
     "start": "tsc && next build && next start",
     "build": "tsc && next build",
-    "export": "tsc && next build && next export -o ipfs",
+    "export": "tsc && next build",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "tslint": "tsc -p tsconfig.json --noEmit",
@@ -36,7 +36,6 @@
     "graphql-request": "^7.0.1",
     "next": "^15.0.3",
     "next-plausible": "^3.12.0",
-    "next-pwa": "^5.6.0",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
