feat: nextjs -> vite

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,46 @@
-WALLETCONNECT_PROJECT_ID=
-YDAEMON_BASE_URI=
-KATANA_APR_SERVICE_API=
-NODE_ENV=development
+# Vite Environment Variables
+# All env vars must be prefixed with VITE_ to be accessible in the browser
 
-RPC_URI_FOR_1=
-RPC_URI_FOR_10=
-RPC_URI_FOR_100=
-RPC_URI_FOR_137=
-RPC_URI_FOR_146=
-RPC_URI_FOR_250=
-RPC_URI_FOR_8453=
-RPC_URI_FOR_42161=
-RPC_URI_FOR_747474=
+# RPC URLs for mainnet
+VITE_RPC_URI_FOR_1=
+VITE_RPC_URI_FOR_10=
+VITE_RPC_URI_FOR_56=
+VITE_RPC_URI_FOR_100=
+VITE_RPC_URI_FOR_137=
+VITE_RPC_URI_FOR_250=
+VITE_RPC_URI_FOR_252=
+VITE_RPC_URI_FOR_288=
+VITE_RPC_URI_FOR_8453=
+VITE_RPC_URI_FOR_42161=
+VITE_RPC_URI_FOR_42170=
+VITE_RPC_URI_FOR_56288=
+VITE_RPC_URI_FOR_81457=
+VITE_RPC_URI_FOR_111188=
+VITE_RPC_URI_FOR_747474=
+
+# RPC URLs for testnet
+VITE_RPC_URL_BINANCE_TESTNET=
+VITE_RPC_URI_FOR_2522=
+VITE_RPC_URI_FOR_9728=
+VITE_RPC_URI_FOR_17000=
+VITE_RPC_URI_FOR_18233=
+VITE_RPC_URI_FOR_28882=
+VITE_RPC_URI_FOR_80001=
+VITE_RPC_URI_FOR_84532=
+VITE_RPC_URI_FOR_421614=
+VITE_RPC_URI_FOR_11155111=
+VITE_RPC_URI_FOR_11155420=
+
+# API Keys
+VITE_ALCHEMY_KEY=
+VITE_ALCHEMY_API_KEY=
+VITE_INFURA_PROJECT_ID=
+VITE_WALLETCONNECT_PROJECT_ID=
+
+# Yearn specific
+VITE_YDAEMON_BASE_URI=
+VITE_KATANA_APR_SERVICE_API=
+
+# Vercel specific (for OG image generation)
+VITE_VERCEL_ENV=
+VITE_VERCEL_URL=
