--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "yearnfi",
   "version": "0.3.7",
   "scripts": {
-    "dev": "next",
-    "inspect": "NODE_OPTIONS='--inspect' next",
+    "dev": "vite",
     "dev:ts": "tsc --watch",
-    "start": "tsc && next build && next start",
-    "build": "tsc && next build",
-    "export": "tsc && next build",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "tslint": "tsc -p tsconfig.json --noEmit",
@@ -33,14 +31,14 @@
     "framer-motion": "^11.2.10",
     "graphql": "^16.8.2",
     "graphql-request": "^7.0.1",
-    "next": "^15.0.3",
-    "next-plausible": "^3.12.0",
     "nprogress": "^0.2.0",
+    "plausible-tracker": "^0.3.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.0",
     "react-paginate": "^8.2.0",
+    "react-router-dom": "^7.8.2",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
     "tailwind-gradient-mask-image": "^1.2.0",
@@ -53,23 +51,25 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
-    "@next/bundle-analyzer": "^14.2.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/react": "^16.0.0",
     "@types/minimatch": "^6.0.0",
     "@types/node": "^20.14.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@types/react-helmet-async": "^1.0.3",
+    "@vitejs/plugin-react": "^5.0.2",
     "babel-loader": "^9.1.3",
     "bump": "^0.2.5",
+    "glob": "^11.0.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "next-transpile-modules": "^10.0.1",
     "postcss": "^8.4.38",
     "postcss-nesting": "^12.1.5",
+    "react-helmet-async": "^2.0.5",
     "tailwindcss": "^4.1.11",
     "ts-loader": "^9.5.1",
+    "vite": "^7.1.5",
     "vitest": "^1.6.0",
     "webpack": "^5.92.1"
   }
