--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "noEmit": true,
     "incremental": true,
     "isolatedModules": true,
-    "plugins": [{ "name": "next" }]
+    "types": ["vite/client"]
   },
   "exclude": ["node_modules", "_app"],
   "include": [
@@ -48,11 +48,9 @@
     "public",
     "postcss.config.js",
     "tailwind.config.js",
-    "next.config.js",
-    "theme.config.js",
-    ".next/types/**/*.ts",
-    "jest.config.js",
+    "vite.config.ts",
     "vitest.config.ts",
-    "worker/index.js"
+    "worker/index.js",
+    "env.d.ts"
   ]
 }
