--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@wagmi/connectors": "^5.1.4",
     "@wagmi/core": "^2.11.7",
     "axios": "^1.7.2",
+    "cross-fetch": "^4.1.0",
     "ethers": "5.7.2",
     "framer-motion": "^11.2.10",
     "graphql": "^16.8.2",
