chore: better safe than sorry

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-	"private": true,
-	"scripts": {
-		"legacy": "(cd packages/legacy && bun dev)",
-		"nextgen": "(cd packages/nextgen && bun dev)",
-		"clean": "bash clean.sh"
-	},
-	"workspaces": ["packages/*"],
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.2",
 		"typescript": "^5.5.4"
 	},
 	"overrides": {
 		"ox": "0.6.9"
-	}
+	},
+	"private": true,
+	"scripts": {
+		"legacy": "(cd packages/legacy && bun dev)",
+		"nextgen": "(cd packages/nextgen && bun dev)",
+		"clean": "bash clean.sh"
+	},
+	"workspaces": ["packages/*"]
 }
