--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -73,5 +73,13 @@
     "ts-loader": "^9.5.1",
     "vitest": "^1.6.0",
     "webpack": "^5.92.1"
+  },
+  "overrides": {
+    "chalk": "5.3.0",
+    "strip-ansi": "7.1.0",
+    "color-convert": "2.0.1",
+    "color-name": "1.1.4",
+    "is-core-module": "2.13.1",
+    "error-ex": "1.3.2"
   }
 }
