--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
 		"typescript": "^5.5.4"
 	},
 	"overrides": {
-		"ox": "0.6.9"
+		"ox": "0.6.9",
+		"chalk": "5.3.0",
+		"strip-ansi": "7.1.0",
+		"color-convert": "2.0.1",
+		"color-name": "1.1.4",
+		"is-core-module": "2.13.1",
+		"error-ex": "1.3.2"
 	},
 	"private": true,
 	"scripts": {
