chore: fix routing and images

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ VITE_WALLETCONNECT_PROJECT_ID=
 # Yearn specific
 VITE_YDAEMON_BASE_URI=
 VITE_KATANA_APR_SERVICE_API=
+VITE_BASE_YEARN_ASSETS_URI=
 
 # Vercel specific (for OG image generation)
 VITE_VERCEL_ENV=
