--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "rootDirs": ["."],
     "baseUrl": ".",
     "paths": {
+      "@components/*": ["src/components/*"],
+      "@hooks/*": ["src/hooks/*"],
       "@lib/*": ["apps/lib/*"],
       "@vaults/*": ["apps/vaults/*"],
       "@vaults-v2/*": ["apps/vaults-v2/*"],
