--- a/.env.example
+++ b/.env.example
@@ -1,47 +1,22 @@
-# Vite Environment Variables
-# All env vars must be prefixed with VITE_ to be accessible in the browser
+VITE_WS_URL_MAINNET=
+VITE_WS_URL_OPTIMISM=
+VITE_WS_URL_FANTOM=
+VITE_WS_URL_ARBITRUM=
 
-# RPC URLs for mainnet
-VITE_RPC_URI_FOR_1=
-VITE_RPC_URI_FOR_10=
-VITE_RPC_URI_FOR_56=
-VITE_RPC_URI_FOR_100=
-VITE_RPC_URI_FOR_137=
-VITE_RPC_URI_FOR_250=
-VITE_RPC_URI_FOR_252=
-VITE_RPC_URI_FOR_288=
-VITE_RPC_URI_FOR_8453=
-VITE_RPC_URI_FOR_42161=
-VITE_RPC_URI_FOR_42170=
-VITE_RPC_URI_FOR_56288=
-VITE_RPC_URI_FOR_81457=
-VITE_RPC_URI_FOR_111188=
-VITE_RPC_URI_FOR_747474=
-
-# RPC URLs for testnet
-VITE_RPC_URL_BINANCE_TESTNET=
-VITE_RPC_URI_FOR_2522=
-VITE_RPC_URI_FOR_9728=
-VITE_RPC_URI_FOR_17000=
-VITE_RPC_URI_FOR_18233=
-VITE_RPC_URI_FOR_28882=
-VITE_RPC_URI_FOR_80001=
-VITE_RPC_URI_FOR_84532=
-VITE_RPC_URI_FOR_421614=
-VITE_RPC_URI_FOR_11155111=
-VITE_RPC_URI_FOR_11155420=
-
-# API Keys
+VITE_RPC_URL_MAINNET=
+VITE_RPC_URL_OPTIMISM=
+VITE_RPC_URL_FANTOM=
+VITE_RPC_URL_ARBITRUM=
+VITE_RPC_URL_POLYGON=
+VITE_RPC_URL_BASE=
+VITE_RPC_URL_GNOSIS=
+VITE_RPC_URL_SONIC=
 VITE_ALCHEMY_KEY=
-VITE_ALCHEMY_API_KEY=
-VITE_INFURA_PROJECT_ID=
+VITE_INFURA_KEY=
+VITE_PARTNER_ID_ADDRESS=
+VITE_SHOULD_USE_PARTNER_CONTRACT=
 VITE_WALLETCONNECT_PROJECT_ID=
-
-# Yearn specific
-VITE_YDAEMON_BASE_URI=
-VITE_KATANA_APR_SERVICE_API=
 VITE_BASE_YEARN_ASSETS_URI=
+VITE_SENTRY_DSN=
 
-# Vercel specific (for OG image generation)
-VITE_VERCEL_ENV=
-VITE_VERCEL_URL=
+VITE_YDAEMON_BASE_URI=
