--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,39 +1,36 @@
 name: Lint
 
 on:
-    push:
-        branches:
-            - main
-    pull_request:
-    workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
+  workflow_dispatch:
 
 permissions:
-    checks: write
-    contents: read
+  checks: write
+  contents: read
 
 jobs:
-    run-linters:
-        name: Run linters
-        runs-on: ubuntu-latest
+  run-linters:
+    name: Run linters
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Check out Git repository
-              uses: actions/checkout@v4
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v4
 
-            - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 20
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-            - name: Install Bun
-              run: |
-                  curl -fsSL https://bun.sh/install | bash
-                  echo "$HOME/.bun/bin" >> $GITHUB_PATH
-            - name: Install project dependencies
-              run: bun install
+      - name: Install Bun
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+          echo "$HOME/.bun/bin" >> $GITHUB_PATH
+      - name: Install project dependencies
+        run: bun install
 
-            - name: Lint legacy package
-              run: cd packages/legacy && bun run lint
-
-            - name: Lint nextgen package
-              run: cd packages/nextgen && bun run lint
+      - name: Lint
+        run: bun run lint
