chore: adjust env var and uris

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,20 @@
-VITE_WS_URL_MAINNET=
-VITE_WS_URL_OPTIMISM=
-VITE_WS_URL_FANTOM=
-VITE_WS_URL_ARBITRUM=
+# Keys will be remapped with VITE_ prefix.
+RPC_URI_FOR_1=
+RPC_URI_FOR_10=
+RPC_URI_FOR_100=
+RPC_URI_FOR_137=
+RPC_URI_FOR_146=
+RPC_URI_FOR_250=
+RPC_URI_FOR_8453=
+RPC_URI_FOR_42161=
+RPC_URI_FOR_747474=
 
-VITE_RPC_URL_MAINNET=
-VITE_RPC_URL_OPTIMISM=
-VITE_RPC_URL_FANTOM=
-VITE_RPC_URL_ARBITRUM=
-VITE_RPC_URL_POLYGON=
-VITE_RPC_URL_BASE=
-VITE_RPC_URL_GNOSIS=
-VITE_RPC_URL_SONIC=
-VITE_ALCHEMY_KEY=
-VITE_INFURA_KEY=
-VITE_PARTNER_ID_ADDRESS=
-VITE_SHOULD_USE_PARTNER_CONTRACT=
-VITE_WALLETCONNECT_PROJECT_ID=
-VITE_BASE_YEARN_ASSETS_URI=
-VITE_SENTRY_DSN=
+ALCHEMY_KEY=
+INFURA_KEY=
+PARTNER_ID_ADDRESS=
+SHOULD_USE_PARTNER_CONTRACT=true
+WALLETCONNECT_PROJECT_ID=
+BASE_YEARN_ASSETS_URI=https://token-assets-one.vercel.app/api
+YDAEMON_BASE_URI=https://ydaemon.yearn.fi
+SENTRY_DSN=
 
-VITE_YDAEMON_BASE_URI=
