--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/react-helmet-async": "^1.0.3",
+    "@vercel/node": "^5.3.22",
     "@vitejs/plugin-react": "^5.0.2",
     "babel-loader": "^9.1.3",
     "bump": "^0.2.5",
@@ -70,6 +71,7 @@
     "react-helmet-async": "^2.0.5",
     "tailwindcss": "^4.1.11",
     "ts-loader": "^9.5.1",
+    "typescript": "^5.9.2",
     "vite": "^7.1.5",
     "vitest": "^1.6.0",
     "webpack": "^5.92.1"
