--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,7 @@
     "isolatedModules": true,
     "types": ["vite/client"]
   },
-  "exclude": ["node_modules", "_app"],
+  "exclude": ["node_modules", "_app", "api"],
   "include": [
     "**/*.css",
     "**/*.ts",
