--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -15,63 +15,63 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@clustersxyz/sdk": "^0.2.1",
-    "@cowprotocol/cow-sdk": "5.10.3",
-    "@headlessui/react": "^2.0.4",
-    "@rainbow-me/rainbowkit": "2.2.5",
-    "@react-hookz/web": "^24.0.4",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/react-query": "^5.51.11",
-    "@vanilla-extract/css": "^1.17.0",
-    "@vanilla-extract/sprinkles": "^1.6.3",
-    "@vercel/og": "^0.8.5",
-    "@wagmi/connectors": "^5.1.4",
-    "@wagmi/core": "^2.11.7",
+    "@clustersxyz/sdk": "1.0.2",
+    "@cowprotocol/cow-sdk": "6.3.2",
+    "@headlessui/react": "2.2.8",
+    "@rainbow-me/rainbowkit": "2.2.8",
+    "@react-hookz/web": "25.1.1",
+    "@tailwindcss/forms": "0.5.10",
+    "@tailwindcss/typography": "0.5.16",
+    "@tanstack/react-query": "5.87.4",
+    "@vanilla-extract/css": "1.17.4",
+    "@vanilla-extract/sprinkles": "1.6.5",
+    "@vercel/og": "0.8.5",
+    "@wagmi/connectors": "5.9.9",
+    "@wagmi/core": "2.20.3",
     "@yearnfi/nextgen": "workspace:*",
-    "axios": "^1.7.2",
-    "ethers": "5.7.2",
-    "framer-motion": "^11.2.10",
-    "graphql": "^16.8.2",
-    "graphql-request": "^7.0.1",
-    "next": "^15.0.3",
-    "next-plausible": "^3.12.0",
-    "nprogress": "^0.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-fast-marquee": "^1.6.5",
-    "react-hot-toast": "^2.5.0",
-    "react-paginate": "^8.2.0",
-    "recharts": "^2.12.7",
-    "swr": "^2.2.5",
-    "tailwind-gradient-mask-image": "^1.2.0",
-    "use-indexeddb": "^2.0.2",
-    "vaul": "^1.1.2",
-    "viem": "^2.31.7",
-    "wagmi": "^2.10.10",
-    "xxhashjs": "^0.2.2",
-    "zod": "^3.23.8"
+    "axios": "1.12.1",
+    "ethers": "6.15.0",
+    "framer-motion": "12.23.12",
+    "graphql": "16.11.0",
+    "graphql-request": "7.2.0",
+    "next": "15.5.3",
+    "next-plausible": "3.12.4",
+    "nprogress": "0.2.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-fast-marquee": "1.6.5",
+    "react-hot-toast": "2.6.0",
+    "react-paginate": "8.3.0",
+    "recharts": "3.2.0",
+    "swr": "2.3.6",
+    "tailwind-gradient-mask-image": "1.2.0",
+    "use-indexeddb": "2.0.2",
+    "vaul": "1.1.2",
+    "viem": "2.37.5",
+    "wagmi": "2.16.9",
+    "xxhashjs": "0.2.2",
+    "zod": "4.1.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.1.3",
-    "@next/bundle-analyzer": "^14.2.4",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@testing-library/react": "^16.0.0",
-    "@types/minimatch": "^6.0.0",
-    "@types/node": "^20.14.2",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "babel-loader": "^9.1.3",
-    "bump": "^0.2.5",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "next-transpile-modules": "^10.0.1",
-    "postcss": "^8.4.38",
-    "postcss-nesting": "^12.1.5",
-    "tailwindcss": "^4.1.11",
-    "ts-loader": "^9.5.1",
-    "vitest": "^1.6.0",
-    "webpack": "^5.92.1"
+    "@biomejs/biome": "2.2.4",
+    "@next/bundle-analyzer": "15.5.3",
+    "@tailwindcss/postcss": "4.1.13",
+    "@testing-library/react": "16.3.0",
+    "@types/minimatch": "6.0.0",
+    "@types/node": "24.3.3",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
+    "@vitejs/plugin-react": "5.0.2",
+    "babel-loader": "10.0.0",
+    "bump": "0.2.5",
+    "husky": "9.1.7",
+    "lint-staged": "16.1.6",
+    "next-transpile-modules": "10.0.1",
+    "postcss": "8.5.6",
+    "postcss-nesting": "13.0.2",
+    "tailwindcss": "4.1.13",
+    "ts-loader": "9.5.4",
+    "vitest": "3.2.4",
+    "webpack": "5.101.3"
   }
 }
