--- a/packages/nextgen/package.json
+++ b/packages/nextgen/package.json
@@ -13,19 +13,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-icons": "5.5.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.1.2",
-    "@tailwindcss/vite": "^4.1.11",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.6.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "vite": "^7.0.4"
+    "@biomejs/biome": "2.2.4",
+    "@tailwindcss/vite": "4.1.13",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
+    "@vitejs/plugin-react": "5.0.2",
+    "tailwind-merge": "3.3.1",
+    "tailwindcss": "4.1.13",
+    "vite": "7.1.5"
   },
   "exports": {
     ".": {
