--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,23 +1,11 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
-    - package-ecosystem: 'npm' # See documentation for possible values
-      directory: '/' # Location of package manifests
-      schedule:
-          interval: 'monthly'
-          day: 'monday'
-          time: '10:00'
-      ignore:
-          - dependency-name: '@types/*' #Ignore updates for all `@types/` packages
-          - dependency-name: 'ts-loader' #Ignore updates for ts-loader
-          - dependency-name: 'dotenv-webpack' #Ignore updates for dotenv-webpack
-          - dependency-name: '@typescript*' #Ignore updates for all `@typescript` packages
-          - dependency-name: 'postcss*' #Ignore updates for all `postcss` packages
-          - dependency-name: 'sharp' #Ignore updates for sharp
-          - dependency-name: 'sass' #Ignore updates for sass
-          - dependency-name: 'typescript' #Ignore patch for typescript
-            update-types: ['version-update:semver-patch']
+  - package-ecosystem: "bun"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "monday"
+    labels:
+      - "security"
+      - "dependencies"
+
