--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "biome check --write .",
     "tslint": "tsc -p tsconfig.json --noEmit",
     "bump": "bump",
-    "test": "vitest run"
+    "test": "vitest run",
+    "clean": "bash clean.sh"
   },
   "dependencies": {
     "@clustersxyz/sdk": "^0.2.1",
@@ -18,12 +19,7 @@
     "@headlessui/react": "^2.0.4",
     "@rainbow-me/rainbowkit": "2.2.5",
     "@react-hookz/web": "^24.0.4",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.51.11",
-    "@vanilla-extract/css": "^1.17.0",
-    "@vanilla-extract/sprinkles": "^1.6.3",
-    "@vercel/og": "^0.8.5",
     "@wagmi/connectors": "^5.1.4",
     "@wagmi/core": "^2.11.7",
     "axios": "^1.7.2",
@@ -32,17 +28,14 @@
     "framer-motion": "^11.2.10",
     "graphql": "^16.8.2",
     "graphql-request": "^7.0.1",
-    "nprogress": "^0.2.0",
     "plausible-tracker": "^0.3.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
-    "tailwind-gradient-mask-image": "^1.2.0",
     "use-indexeddb": "^2.0.2",
     "vaul": "^1.1.2",
     "viem": "^2.31.7",
