--- a/package.json
+++ b/package.json
@@ -14,59 +14,67 @@
     "clean": "bash clean.sh"
   },
   "dependencies": {
-    "@clustersxyz/sdk": "^0.2.1",
+    "@clustersxyz/sdk": "^0.2.3",
     "@cowprotocol/cow-sdk": "5.10.3",
-    "@headlessui/react": "^2.0.4",
+    "@headlessui/react": "^2.2.8",
     "@rainbow-me/rainbowkit": "2.2.5",
     "@react-hookz/web": "^24.0.4",
-    "@tanstack/react-query": "^5.51.11",
-    "@wagmi/connectors": "^5.1.4",
-    "@wagmi/core": "^2.11.7",
-    "axios": "^1.7.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.87.4",
+    "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/sprinkles": "^1.6.5",
+    "@vercel/og": "^0.8.5",
+    "@wagmi/connectors": "^5.9.9",
+    "@wagmi/core": "^2.20.3",
+    "axios": "^1.12.2",
     "cross-fetch": "^4.1.0",
     "ethers": "5.7.2",
-    "framer-motion": "^11.2.10",
-    "graphql": "^16.8.2",
-    "graphql-request": "^7.0.1",
+    "framer-motion": "^11.18.2",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
+    "nprogress": "^0.2.0",
     "plausible-tracker": "^0.3.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.0",
-    "react-paginate": "^8.2.0",
-    "react-router-dom": "^7.8.2",
-    "recharts": "^2.12.7",
-    "swr": "^2.2.5",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-hot-toast": "^2.6.0",
+    "react-paginate": "^8.3.0",
+    "react-router-dom": "^7.9.1",
+    "recharts": "^2.15.4",
+    "swr": "^2.3.6",
+    "tailwind-gradient-mask-image": "^1.2.0",
     "use-indexeddb": "^2.0.2",
     "vaul": "^1.1.2",
-    "viem": "^2.31.7",
-    "wagmi": "^2.10.10",
+    "viem": "^2.37.6",
+    "wagmi": "^2.16.9",
     "xxhashjs": "^0.2.2",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.1.3",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@testing-library/react": "^16.0.0",
+    "@biomejs/biome": "^2.2.4",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@testing-library/react": "^16.3.0",
     "@types/minimatch": "^6.0.0",
-    "@types/node": "^20.14.2",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/node": "^20.19.14",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@types/react-helmet-async": "^1.0.3",
     "@vercel/node": "^5.3.22",
     "@vitejs/plugin-react": "^5.0.2",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^9.2.1",
     "bump": "^0.2.5",
     "glob": "^11.0.3",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "postcss": "^8.4.38",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
+    "postcss": "^8.5.6",
     "postcss-nesting": "^12.1.5",
     "react-helmet-async": "^2.0.5",
-    "tailwindcss": "^4.1.11",
-    "ts-loader": "^9.5.1",
+    "tailwindcss": "^4.1.13",
+    "ts-loader": "^9.5.4",
     "typescript": "^5.9.2",
     "vite": "^7.1.5",
-    "vitest": "^1.6.0",
-    "webpack": "^5.92.1"
+    "vitest": "^1.6.1",
+    "webpack": "^5.101.3"
   }
 }
