feat: fix mobile modals
feat: improved mobile

feat: better mobile tooltips

fix: address formatting for images

fix: mobile hamburger modal

feat: show holdings in mobile when you have them, styling

fix: risk score tooltip styling

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ INFURA_KEY=
 PARTNER_ID_ADDRESS=
 SHOULD_USE_PARTNER_CONTRACT=true
 WALLETCONNECT_PROJECT_ID=
-BASE_YEARN_ASSETS_URI=https://token-assets-one.vercel.app/api
+BASE_YEARN_ASSETS_URI=https://cdn.jsdelivr.net/gh/yearn/tokenassets@main
 YDAEMON_BASE_URI=https://ydaemon.yearn.fi
 SENTRY_DSN=
 
