--- a/apps/lib/data/home-manifest.json
+++ b/apps/lib/data/home-manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Yearn",
   "short_name": "Yearn",
-  "description": "The yield protocol for digital assets",
+  "description": "DeFi's Yield Aggregator.",
   "iconPath": "./favicons/favicon.svg",
   "locale": "en-US",
   "uri": "https://yearn.fi/",
   "og": "https://yearn.fi/og.png",
-  "twitter": "@iearnfinance",
+  "twitter": "@yearnfi",
   "github": "https://github.com/yearn/yearn.fi",
   "icons": [
     {
