--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@clustersxyz/sdk": "0.2.3",
     "@cowprotocol/cow-sdk": "7.0.3",
+    "@cowprotocol/sdk-viem-adapter": "0.1.0",
     "@headlessui/react": "2.2.7",
     "@rainbow-me/rainbowkit": "2.2.5",
     "@react-hookz/web": "24.0.4",
@@ -24,7 +25,6 @@
     "@wagmi/core": "2.19.0",
     "axios": "1.12.2",
     "cross-fetch": "4.1.0",
-    "ethers": "5.7.2",
     "framer-motion": "11.18.2",
     "graphql": "16.11.0",
     "plausible-tracker": "0.3.9",
