chore: replace clusters sdk with direct api

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,5 @@ BASE_YEARN_ASSETS_URI=https://cdn.jsdelivr.net/gh/yearn/tokenassets@main
 YDAEMON_BASE_URI=https://ydaemon.yearn.fi
 SENTRY_DSN=
 
+CLUSTERS_API_URL=https://api.clusters.xyz/v1
+CLUSTERS_API_KEY=
