feat: apply improvements to v2 vaults

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -67,6 +67,7 @@
       "!**/wagmi.ts",
       "!**/wagmi.d.ts",
       "!**/bun.lock",
+      "!style.css",
       "!**/apps/lib/style.css"
     ]
   }
