--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-dom": "19.2.0",
     "react-hot-toast": "2.6.0",
     "react-paginate": "8.3.0",
-    "react-router-dom": "7.9.4",
+    "react-router": "7",
     "recharts": "2.15.4",
     "swr": "2.3.6",
     "use-indexeddb": "2.0.2",
