this is a test do not merge

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -68,7 +68,8 @@
       "!**/wagmi.d.ts",
       "!**/bun.lock",
       "!**/yearn.fi-worktree-*",
-      "!**/apps/lib/style.css"
+      "!**/apps/lib/style.css",
+      "!**/.global"
     ]
   }
 }
