--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,10 @@
 {
-  "packages/**/*.{ts,tsx}": ["bunx biome format --write", "bunx biome lint --error-on-warnings"],
-  "packages/**/*.css": ["bunx biome format --write", "bunx biome lint --error-on-warnings"]
+  "{apps,src,pages,api}/**/*.{ts,tsx}": [
+    "bunx biome format --write",
+    "bunx biome lint --error-on-warnings"
+  ],
+  "{apps,src,pages,api}/**/*.css": [
+    "bunx biome format --write",
+    "bunx biome lint --error-on-warnings"
+  ]
 }
