chore: update biome css parsing and lint

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -41,6 +41,13 @@
       }
     }
   },
+  "css": {
+    "parser": {
+      "cssModules": false,
+      "allowWrongLineComments": false,
+      "tailwindDirectives": true
+    }
+  },
   "javascript": {
     "formatter": {
       "quoteStyle": "single",
