Chore: update lint-staged (#825)
* chore update lint-staged

* fix: incorrect litstagedrc config

* chore: lint

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -44,8 +44,7 @@
   "css": {
     "parser": {
       "cssModules": false,
-      "allowWrongLineComments": false,
-      "tailwindDirectives": true
+      "allowWrongLineComments": false
     }
   },
   "javascript": {
