feat: add charts

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ SHOULD_USE_PARTNER_CONTRACT=true
 WALLETCONNECT_PROJECT_ID=
 BASE_YEARN_ASSETS_URI=https://cdn.jsdelivr.net/gh/yearn/tokenassets@main
 YDAEMON_BASE_URI=https://ydaemon.yearn.fi
+KONG_GRAPHQL_URL=https://kong.yearn.fi/api/gql
+CHARTS_API_BASE=
 SENTRY_DSN=
 
 CLUSTERS_API_URL=https://api.clusters.xyz/v1
