refactor: Migrate V3 landing components to `apps/new-landing-1` and update project configurations.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "@landing/*": ["apps/landing/*"],
       "@nextgen/*": ["apps/nextgen/*"],
       "@utils/*": ["apps/nextgen/utils/*"],
+      "@new-landing/*": ["apps/new-landing-1/*"],
       "/src/*": ["src/*"]
     },
     /* Basic Options */
