--- a/package.json
+++ b/package.json
@@ -59,5 +59,11 @@
     "vite": "7.2.7",
     "vite-plugin-webfont-dl": "3.11.1",
     "vitest": "1.6.1"
+  },
+  "resolutions": {
+    "ox": "0.9.6"
+  },
+  "overrides": {
+    "ox": "0.9.6"
   }
 }
