Fix: Rest URL name

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ SHOULD_USE_PARTNER_CONTRACT=true
 WALLETCONNECT_PROJECT_ID=
 BASE_YEARN_ASSETS_URI=https://cdn.jsdelivr.net/gh/yearn/tokenassets@main
 YDAEMON_BASE_URI=https://ydaemon.yearn.fi
-PUBLIC_REST_URL=https://kong.yearn.fi/api/rest
+KONG_REST_URL=https://kong.yearn.fi/api/rest
 SENTRY_DSN=
 
 CLUSTERS_API_URL=https://api.clusters.xyz/v1
