--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "tslint": "tsc -p tsconfig.json --noEmit",
     "bump": "bump",
     "test": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
     "clean": "bash clean.sh",
     "prepare": "husky"
   },
@@ -42,6 +45,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.6",
+    "@playwright/test": "^1.40.0",
+    "@synthetixio/synpress": "^4.0.0",
     "@tailwindcss/postcss": "4.1.17",
     "@testing-library/react": "16.3.0",
     "@types/minimatch": "6.0.0",
@@ -51,8 +56,10 @@
     "@vercel/node": "5.5.5",
     "@vitejs/plugin-react": "5.1.0",
     "bump": "0.2.5",
+    "dotenv": "^17.2.3",
     "husky": "9.1.7",
     "lint-staged": "16.2.6",
+    "playwright": "^1.40.0",
     "postcss": "8.5.6",
     "tailwindcss": "4.1.17",
     "typescript": "5.9.3",
