--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.6",
-    "@playwright/test": "^1.40.0",
-    "@synthetixio/synpress": "^4.0.0",
+    "@playwright/test": "1.48.2",
+    "@synthetixio/synpress": "4.1.1",
     "@tailwindcss/postcss": "4.1.17",
     "@testing-library/react": "16.3.0",
     "@types/minimatch": "6.0.0",
@@ -59,7 +59,7 @@
     "dotenv": "^17.2.3",
     "husky": "9.1.7",
     "lint-staged": "16.2.6",
-    "playwright": "^1.40.0",
+    "playwright": "1.53.2",
     "postcss": "8.5.6",
     "tailwindcss": "4.1.17",
     "typescript": "5.9.3",
