feat: v2 page/switch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "@components/*": ["src/components/*"],
       "@hooks/*": ["src/hooks/*"],
       "@lib/*": ["apps/lib/*"],
-      "@vaults/*": ["apps/vaults/*"],
+      "@vaults-shared/*": ["apps/vaults-shared/*"],
       "@vaults-v2/*": ["apps/vaults-v2/*"],
       "@vaults-v3/*": ["apps/vaults-v3/*"],
       "@landing/*": ["apps/landing/*"],
