--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "plausible-tracker": "0.3.9",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-dom-confetti": "^0.2.0",
     "react-hot-toast": "2.6.0",
     "react-paginate": "8.3.0",
     "react-router": "7.9.5",
